# pi-system-coder

./: PROJECT_SUMMARY.md  README.md  USER_REQUIREMENTS_DOCUMENT.md  env.example  gemini.md  main.py  package-lock.json  pyproject.toml  requirements.txt  system_prompt.md
backend/: __init__.py
backend/agent/: __init__.py  orchestrator.py
backend/mcp/: README.md  __init__.py  server.py
backend/src/: __init__.py
backend/src/config/: __init__.py  llm_config.py
backend/src/tools/: __init__.py  api_selection.py  code_creation.py  file_output.py  logic_creation.py  test_run.py
backend/tests/: __init__.py  test_api_selection.py  test_code_creation.py  test_file_output.py  test_logic_creation.py  test_test_run.py
frontend/: PHASE1_TESTING.md  PHASE2_TESTING.md  PHASE3_TESTING.md  PHASE4_TESTING.md  README.md  streamlit_app.py
frontend/components/: __init__.py  chat.py  output.py  status.py
frontend/utils/: __init__.py  orchestrator_helper.py  session_manager.py
