[project]
name = "pi-system-coder"
version = "0.1.0"
description = "A Gemini CLI agent for PI System code generation."
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "python-dotenv",
    "streamlit",
    "mcp", # Assuming mcp is a dependency
    # Add other project dependencies here
]
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "frontend*", "mcp*"] # Include your top-level packages

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"